--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,13 @@
 {
+	"manifest_version": 2,
 	"name": "Clicky Monitor",
-	"version": "2.0.3",
-	"minimum_chrome_version": "6.0.472.53",
-	"description": "A Google Chrome™ extension for Clicky Web Analytics.",
-	"background_page": "background.html",
+	"version": "2.0.4",
+	"description": "A Google Chrome extension for Clicky Web Analytics.",
+
+	"background": {
+		"page": "background.html"
+	},
+
 	"options_page": "options.html",
 	"icons": {
 		"16": "images/clicky_icon_16.png",
@@ -13,7 +17,7 @@
 	},
 	"browser_action": {
 		"default_icon": "images/clicky_icon.png",
-		"popup": "popup.html"
+		"default_popup": "popup.html"
 	},
 	"permissions": ["tabs", "notifications", "contextMenus", "http://api.getclicky.com/", "https://api.getclicky.com/"]
 }
