--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "Clicky Monitor",
+  "name": "Clicky Monitor V3",
   "version": "3.0.0",
   "description": "A Google Chrome extension for Clicky Web Analytics (Manifest V3 Updated).",
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "javascript/background.js"
   },
   "options_page": "options.html",
   "icons": {
