--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,31 @@
 {
-	"manifest_version": 2,
-	"name": "Clicky Monitor",
-	"version": "2.0.4",
-	"description": "A Google Chrome extension for Clicky Web Analytics.",
-
-	"background": {
-		"page": "background.html"
-	},
-
-	"options_page": "options.html",
-	"icons": {
-		"16": "images/clicky_icon_16.png",
-		"32": "images/clicky_icon_32.png",
-		"48": "images/clicky_icon_48.png",
-		"128": "images/clicky_icon_128.png"
-	},
-	"browser_action": {
-		"default_icon": "images/clicky_icon.png",
-		"default_popup": "popup.html"
-	},
-	"permissions": ["tabs", "notifications", "contextMenus", "http://api.getclicky.com/", "https://api.getclicky.com/"]
+  "manifest_version": 3,
+  "name": "Clicky Monitor",
+  "version": "3.0.0",
+  "description": "A Google Chrome extension for Clicky Web Analytics.",
+  "background": {
+    "service_worker": "javascript/background.js"
+  },
+  "options_page": "options.html",
+  "icons": {
+    "16": "images/clicky_icon_16.png",
+    "32": "images/clicky_icon_32.png",
+    "48": "images/clicky_icon_48.png",
+    "128": "images/clicky_icon_128.png"
+  },
+  "action": {
+    "default_icon": "images/clicky_icon.png",
+    "default_popup": "popup.html"
+  },
+  "permissions": [
+    "storage",
+    "notifications",
+    "contextMenus",
+    "alarms",
+    "idle",
+    "tabs"
+  ],
+  "host_permissions": [
+    "https://api.clicky.com/"
+  ]
 }
