--- a/manifest.json
+++ b/manifest.json
@@ -21,8 +21,7 @@
     "storage",
     "notifications",
     "contextMenus",
-    "alarms",
-    "tabs"
+    "alarms"
   ],
   "host_permissions": [
     "https://api.clicky.com/"
